public/css/demo.css
/* ... */
.darkmode {
    background-color:black;
}

.lightMode {
    background-color:#444444;
}

html, body, #dndmenu, #my-panel {
    overflow-x: hidden;
    overflow-y: hidden; /* disabled temporarily for debugging window */
    height: 100%;
    width: 100%;
}

a:link, a:visited, a:link:active, a:visited:active {
  color: white;
  text-decoration: none;
  cursor: auto;
}

.Menu {
  border: 4px solid red 
}

.Menu:hover {
  border: 4px solid gold;
}

.MenuTitleBar {
    cursor: move; 
    background-color: red;
    color: white;
}

.TitleBarText {
    height: 100%;
    line-height: 40px;
    margin: auto;
    text-align: center;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    /* text-indent: 10px; */
}

/* Necessary: Sets titlebar color when anywhere on .Menu is being hovered.  */
/*.Menu:hover .resizer-r,
.Menu:hover .resizer-l,
.Menu:hover .resizer-b,
.Menu:hover .resizer-t, */

.Menu:hover .MenuTitleBar
{
    background-color: gold;
    color: black;

} 




/* Placed on the right side of Menu */
.resizer-r {
    position: absolute;
    cursor: col-resize;
    height: calc(100% + 16px);
    right: -8px;
    top: -8px;
    width: 8px;
    background-color: rgba(0,0,0,0);
}

/* Placed on the left side of Menu */
.resizer-l {
    position: absolute;
    cursor: col-resize;
    height: calc(100% + 16px);
    left: -8px;
    top: -8px;
    width: 8px;
    background-color: rgba(0,0,0,0);
}


/* Placed at the bottom side of Menu */
.resizer-b {
    position: absolute;
    bottom: -8px;
    cursor: row-resize;
    height: 8px;
    left: 0;
    width: 100%;
    background-color: rgba(0,0,0,0);
}

/* Placed at the bottom side of Menu */
.resizer-t {
    position: absolute;
    top: -8px;
    cursor: row-resize;
    height: 8px;
    left: 0;
    width: 100%;
    background-color: rgba(0,0,0,0);
}


.MenuPinBtn {
    /* left: 10px;
    top: 3px; */
    background-color: red;
    border: 1px solid transparent; 

}

.MenuPinBtn:hover {
    cursor: pointer;
    background-color: gold;    
    border: 1px solid black;
}

.Menu:hover .MenuPinBtn {
    background-color: gold;
}


.MenuArrowBtn {
    cursor: pointer;
    background-color: red;
}
.MenuArrowBtn:hover {
    cursor: pointer;
    background-color: #e6c300 !important;
}
.Menu:hover .MenuArrowBtn {
    background-color: gold;
}



.MenuCloseBtn {
    cursor: pointer;
    background-color: brown;
}
.MenuCloseBtn:hover {
    cursor: pointer;
    background-color:  #e6c300 !important; 
}

.EmbeddedMenuButton, #tabbtn, #historybtn {
    color: white;
    cursor: pointer;
    background-color: #840a01;
}
.EmbeddedMenuButton:hover, #tabbtn:hover, #historybtn:hover {
    color: black !important;
    background-color: #ff9100 !important;
}

.RecentlyModified {
    font-family: Segoe UI, sans-serif;
    font-size: 1vw;
    margin-left: 20px;
    width: 166px;
    border: 2px solid black;
    outline: none;
    color: white;
    cursor: pointer;
    background-color: #840a01;
}

.RecentlyModified:hover {
    color: black; 
    background-color: #ff9100;
}

option {
    font-family: Segoe UI, sans-serif;
    font-size: 1vw;
    color: white;
    cursor: pointer;
    background-color: #840a01;
}


#search {
    background-color: #970c02;
    cursor: pointer;
    /* border-radius: 15px; */
}

#search:hover {
    background-color: #FF9100;
    /* rgb(132, 10, 1); */
}

.search-not-found {
    cursor: pointer;
    color: wheat;
}

.search-not-found:hover {
    color: orange;
    background-color: #AF0404;
}

.loadButton {
    background-color: #840a01;

}

.loadButton:hover {
    background-color: #FF9100;
    color: black;
}

.PlusMinusButton {
    cursor:pointer;
}
 
.draggable {
   border: 1px solid red; 
   width: 250px;
   height: 100px;
   text-align: center;
   padding: 20px;
   /* cursor: move; */
   position: relative;
}

.hoverBGColor {
    background-color:green
}

/* applies to all classes starting with string "icon" */
[class^="icon"] {
/*  width: 24px; */
/*  height: 24px; */
    position: relative;
    margin-left: 10px;
    margin-right: 10px;
  /* fill: #fff; */
}

.draggable .drag-mask, .drag-mask {
   position: absolute;
   top: 0px;
   left: 0px;
   width: 0px;
   height: 0px;
   background-color: rgba(0,0,0,0.2);
   z-index: 9999;
}

/* --------------------------- freeze elements during dragging --------------------------- */
.disable-pointer-events {
    pointer-events: none;
    
}


.frozen-menu  {
  border: 4px solid gold;
}

.frozen-menutitlebar
{
    background-color: gold;
    color: black;
} 

.frozen-menupinbtn,.frozen-menupinbtn:hover,
.frozen-MenuArrowBtn,.frozen-MenuArrowBtn:hover {
    background-color: gold;
}


/* On menu fix color of thumb and resizer */
.frozen-menu .drop-zone-floating::-webkit-scrollbar-thumb
{
    background-color: #ccad00; /* color of thumb: same as titlebar: red with gold on hover */

}

.frozen-menu .drop-zone-floating::-webkit-resizer {
    background: gold;
}



/* --------------------------- end freeze  ----------------------------------------------- */


/* --------------------------- start drop-zone --------------------------- */




.drop-zone-floating {
    max-height: 80vh; 
    /* Kept for aesthetic */
    padding-bottom: 5px;
    text-align: left; /* text-align is an inherited property */
    box-sizing: border-box;
    overflow-x: auto;
    overflow-y: auto; 

    resize: both;

    grid-auto-flow: column;
    position: relative; /* so that an empty dropzone can have it's blank element positioned absolutely */
}
/* ... */

